Se actualiza el menu y se aade el caso de uso Consultar Bitcora de Internamiento

--- a/Clinica/Clinica.csproj
+++ b/Clinica/Clinica.csproj
@@ -321,6 +321,7 @@
     <Content Include="Views\Bitacora\Index.cshtml" />
     <Content Include="Views\Bitacora\Ver.cshtml" />
     <Content Include="Views\Operacion\Index.cshtml" />
+    <Content Include="Views\Bitacora\Asignacion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
