--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BLAltaMedica.cs" />
     <Compile Include="BLProcedimiento.cs" />
     <Compile Include="BLOperacion.cs" />
     <Compile Include="BLBitacora.cs" />
